<resources>
    <string name="app_name">QuizIT</string>

    <!-- Main Activity -->
    <string name="txtForgot"><u>Esqueceu sua senha?</u></string>
    <string name="txtCadastrar"><u>Cadastrar</u></string>
    <string name="hint_Matricula">Matrícula</string>
    <string name="hint_Senha">Senha</string>
    <string name="btn_Logar">Logar</string>

    <!-- Cadastro Activity -->
    <string name="hint_Nome">Nome</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Semestre">Semestre</string>
    <string name="btn_Cadastrar">Cadastrar</string>

    <!-- ForgotPassword Activity -->
    <string name="txtForgotPass">Informe o seu email e sua matricula. Dentro de instantes, você receberá uma nova senha em seu email que poderá ser alterada posteriormente.</string>
    <string name="btn_EnviarForgot">Enviar</string>

    <!-- EmailEnviado Activity -->
    <string name="title_activity_email_enviado">EmailEnviadoActivity</string>
    <string name="hint_Enunciado">Enunciado</string>
    <string name="txt_InstrucaoFactory">Preencha os campos e em seguida marque a opção que representa a resposta.</string>
    <string name="hint_AlternativaFactory">Alternativa</string>
    <string name="btn_ConcluirFactory">Concluir</string>
    <string name="hint_Disc">Disciplina</string>
    <string name="hint_RespostaFactory">Resposta</string>
    <string name="title_Factory">Fábrica de Perguntas</string>

    <!-- Home Activity -->
    <string name="btnJogar">Modo Run</string>
    <string name="btnJogarSolo">Jogar</string>


    <string name="titleConfig">Configurações</string>
    <string name="titleModoRun">Modo Run</string>
    <string name="textoFeedback">Escreva seu feedback aqui...</string>
    <string name="btnEnviarFeedback">Enviar</string>
    <string name="btnPlayRand">Jogar</string>
    <string name="btnEscolherPerg">Confirmar</string>
    <string name="txtInstrucao">Escolha a área da(s) pergunta(s):</string>
    <string name="btn_Proximo">Proxima</string>
    <string name="btn_Sair">Sair</string>
    <string name="hint_SenhaAtual">Senha atual</string>
    <string name="hint_NovaSenha">Nova senha</string>
    <string name="hint_ConfirmarSenha">Confirmar senha</string>

</resources>
