<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_quizit"
    tools:context=".com.quizit.activities.EditarPerfilActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Preencha os campos que deseja alterar:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNomeEditarPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_Nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtSenhaAtualEditarPerfil"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint_SenhaAtual"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmarEditarPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtNovaSenhaEditarPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_NovaSenha"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailEditarPerfil"
        app:layout_constraintStart_toStartOf="@+id/edtEmailEditarPerfil"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailEditarPerfil" />

    <EditText
        android:id="@+id/edtConfimarSenhaEdtPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_ConfirmarSenha"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/edtNovaSenhaEditarPerfil"
        app:layout_constraintStart_toStartOf="@+id/edtNovaSenhaEditarPerfil"
        app:layout_constraintTop_toBottomOf="@+id/edtNovaSenhaEditarPerfil" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Para completar as ediçoes, entre com sua senha:"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edtSenhaAtualEditarPerfil"
        app:layout_constraintStart_toStartOf="@+id/edtSenhaAtualEditarPerfil" />

    <Button
        android:id="@+id/btnConfirmarEditarPerfil"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="40dp"
        android:text="@string/btnEscolherPerg"
        android:background="@drawable/flat_selector"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtEmailEditarPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edtNomeEditarPerfil"
        app:layout_constraintStart_toStartOf="@+id/edtNomeEditarPerfil"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeEditarPerfil" />

    <Button
        android:id="@+id/btnSairEditarPerfil"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_Sair"
        android:background="@drawable/flat_selector"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmarEditarPerfil" />
</android.support.constraint.ConstraintLayout>