<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_quizit"
    tools:context="com.example.quizit.quizit.com.quizit.activities.LoginActivity">

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="262dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_Matricula"
        android:inputType="textPersonName"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_Senha"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintEnd_toEndOf="@+id/edtLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtLogin" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtForgot"
        app:layout_constraintEnd_toEndOf="@+id/edtSenha"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/edtSenha"
        app:layout_constraintTop_toBottomOf="@+id/btnLogar" />

    <TextView
        android:id="@+id/txtCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtCadastrar"
        app:layout_constraintEnd_toEndOf="@+id/txtForgot"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/txtForgot"
        app:layout_constraintTop_toBottomOf="@+id/txtForgot" />

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_Logar"
        android:background="@drawable/flat_selector"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/edtSenha"
        app:layout_constraintStart_toStartOf="@+id/edtSenha"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="336dp"
        android:layout_height="212dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/logo_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
